style: fix flex wrap of book list

--- a/Frontend/src/app/components/listar/listar.component.css
+++ b/Frontend/src/app/components/listar/listar.component.css
@@ -2,6 +2,8 @@
   display: flex;
   gap: 10px;
   font-size: 20px;
+  align-items: flex-start;
+  flex-wrap: nowrap;
 }
 #list_container {
   display: flex;
